@@ -35,9 +35,9 @@ import org.apache.hadoop.ipc.VersionedProtocol;
  **********************************************************************/
 public interface DatanodeProtocol extends VersionedProtocol {
   /**
-   * 22: BlockRecoveryCommand introduced in reply to sendHeartbeat().
+   * 23: nextGenerationStamp() removed.
    */
-  public static final long versionID = 22L;
+  public static final long versionID = 23L;
   
   // error code
   final static int NOTIFY = 0;
@@ -141,12 +141,6 @@ public interface DatanodeProtocol extends VersionedProtocol {
    */
   public void reportBadBlocks(LocatedBlock[] blocks) throws IOException;
   
-  /**
-   * @return the next GenerationStamp to be associated with the specified
-   * block. 
-   */
-  public long nextGenerationStamp(Block block) throws IOException;
-
   /**
    * Commit block synchronization in lease recovery
    */
