@@ -15,6 +15,8 @@ Append branch (unreleased changes)
    HDFS-570. Get last block length from a data-node when opening a file
    being written to. (Tsz Wo (Nicholas), SZE via shv)
 
+   HDFS-657. Remove unused legacy data-node protocol methods. (shv)
+
   NEW FEATURES
 
     HDFS-536. Support hflush at DFSClient. (hairong)
